--- a/index.html
+++ b/index.html
@@ -26,12 +26,8 @@
             <h2>Education</h2>
             <ul>
                 <li>
-                    <strong>PhD in Artificial Intelligence</strong><br>
-                    OpenAI Institute, 2020 - 2024
-                </li>
-                <li>
-                    <strong>Master of Science in Computer Science</strong><br>
-                    Tech University, 2018 - 2020
+                    <strong>B.E in Computer Science and Engineering</strong><br>
+                    Chandigarh College of Engineering and Technology, 2023 - 2027
                 </li>
             </ul>
         </section>
@@ -40,14 +36,9 @@
             <h2>Experience</h2>
             <ul>
                 <li>
-                    <strong>AI Language Model at OpenAI</strong><br>
+                    <strong>xyz company</strong><br>
                     2023 - Present<br>
                     Responsible for assisting users with various tasks including text generation, answering questions, and problem-solving.
-                </li>
-                <li>
-                    <strong>Research Assistant at Tech University</strong><br>
-                    2018 - 2020<br>
-                    Conducted research in natural language processing and machine learning.
                 </li>
             </ul>
         </section>
@@ -55,10 +46,9 @@
         <section>
             <h2>Skills</h2>
             <ul>
-                <li>Natural Language Processing</li>
-                <li>Machine Learning</li>
-                <li>Web Development</li>
-                <li>Problem Solving</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Java script</li>
             </ul>
         </section>
 
